--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <section class="javas py-5 mt-5">
       <div class="container">
-        <h1 class="display-3 fw-bold my-4 pb-3 text-center">
+        <h1 class="display-5 fw-bold  pb-2 text-center">
           Módulo Javascript: Desafío Condicionales
         </h1>
         <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -110,11 +110,11 @@
     <footer class="bg-dark text-center text-light p-4">
       <div class="container1">
         <a
-          class="d-block text-light pb-3"
+          class=" text-light pb-3"
           href="https://www.instagram.com/beto_luna87/"
           ><i class="fa-brands fa-square-instagram fa-2x"></i
         ></a>
-        <a class="d-block text-light pb-3" href="https://github.com/Lunatico87"
+        <a class=" text-light pb-3" href="https://github.com/Lunatico87"
           ><i class="fa-brands fa-github fa-2x"></i
         ></a>
       </div>
